...
            Spacer(modifier = Modifier.height(40.dp))

            Button(
                onClick = onLogin,
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("openLoginButton")
            ) {
                Text(stringResource(R.string.public_home_login))
            }

            OutlinedButton(
                onClick = onRegister,
...
