...
    <string name="close_menu">Fechar Menu</string>
    <string name="logout">Sair</string>
    <string name="logo_description">Logótipo da aplicação SeePaw</string>


    <!-- User Homepage Screen -->
    <string name="home_title">Bem-vindo à plataforma SeePaw</string>
    <string name="home_intro_1">
    A SeePaw é uma plataforma que centraliza, num só local, informação sobre animais disponíveis para adoção e apadrinhamento, recolhida de abrigos que desejam divulgar os seus patudos.
    </string>
    <string name="home_intro_2">
    Acreditamos que a tecnologia pode ser uma aliada poderosa no combate ao abandono animal, bem como no apoio às associações que muitas vezes só sobrevivem graças à sua ajuda monetária. Cada ajuda é uma vida transformada — juntos, fazemos a diferença!
    </string>
...
